--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.33 - Referral System: Mobile optimized (500px width, proper spacing, fixed close button) -->
+<!-- Quantum Nexus v6.7.34 - Referral System: Equal card heights with flexbox -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1578,21 +1578,21 @@
                     <div style="font-size: 17px; font-weight: 900; color: #10b981; margin-bottom: 14px; text-align: center; text-shadow: 0 2px 10px rgba(16,185,129,0.6);">💰 Система бонусов</div>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 14px;">
                         <!-- Regular User -->
-                        <div style="text-align: center; padding: 18px 12px; background: linear-gradient(135deg, rgba(102, 126, 234, 0.25), rgba(102, 126, 234, 0.15)); border: 2px solid rgba(102, 126, 234, 0.6); border-radius: 16px; backdrop-filter: blur(10px); box-shadow: 0 6px 20px rgba(102,126,234,0.4); width: 100%; box-sizing: border-box;">
-                            <div style="font-size: 42px; margin-bottom: 8px; filter: drop-shadow(0 3px 6px rgba(102,126,234,0.6));">✅</div>
-                            <div style="font-size: 14px; font-weight: 900; color: #a5b4fc; margin-bottom: 6px;">Обычный</div>
-                            <div style="font-size: 20px; font-weight: 900; color: #667eea; margin-bottom: 4px; text-shadow: 0 2px 10px rgba(102,126,234,0.5);">500 🪙</div>
-                            <div style="font-size: 12px; font-weight: 800; color: rgba(255,255,255,0.95); margin-bottom: 4px;">Каждый</div>
-                            <div style="font-size: 11px; font-weight: 700; color: #10b981;">+ 5%</div>
+                        <div style="text-align: center; padding: 18px 12px; background: linear-gradient(135deg, rgba(102, 126, 234, 0.25), rgba(102, 126, 234, 0.15)); border: 2px solid rgba(102, 126, 234, 0.6); border-radius: 16px; backdrop-filter: blur(10px); box-shadow: 0 6px 20px rgba(102,126,234,0.4); width: 100%; box-sizing: border-box; min-height: 170px; display: flex; flex-direction: column; justify-content: center;">
+                            <div style="font-size: 42px; margin-bottom: 8px; filter: drop-shadow(0 3px 6px rgba(102,126,234,0.6)); flex-shrink: 0;">✅</div>
+                            <div style="font-size: 14px; font-weight: 900; color: #a5b4fc; margin-bottom: 6px; flex-shrink: 0;">Обычный</div>
+                            <div style="font-size: 20px; font-weight: 900; color: #667eea; margin-bottom: 4px; text-shadow: 0 2px 10px rgba(102,126,234,0.5); flex-shrink: 0;">500 🪙</div>
+                            <div style="font-size: 12px; font-weight: 800; color: rgba(255,255,255,0.95); margin-bottom: 4px; flex-shrink: 0;">Каждый</div>
+                            <div style="font-size: 11px; font-weight: 700; color: #10b981; flex-shrink: 0;">+ 5%</div>
                         </div>
                         
                         <!-- Premium User -->
-                        <div style="text-align: center; padding: 18px 12px; background: linear-gradient(135deg, rgba(255,215,0,0.35), rgba(255,200,0,0.25)); border: 2px solid rgba(255,215,0,0.8); border-radius: 16px; backdrop-filter: blur(10px); box-shadow: 0 6px 25px rgba(255,215,0,0.5); width: 100%; box-sizing: border-box;">
-                            <div style="font-size: 42px; margin-bottom: 8px; filter: drop-shadow(0 3px 8px rgba(255,215,0,0.7));">⭐</div>
-                            <div style="font-size: 14px; font-weight: 900; color: #ffd700; margin-bottom: 6px;">Premium</div>
-                            <div style="font-size: 20px; font-weight: 900; color: #ffd700; margin-bottom: 4px; text-shadow: 0 2px 10px rgba(255,215,0,0.5);">2000 🪙</div>
-                            <div style="font-size: 12px; font-weight: 800; color: rgba(255,255,255,0.98); margin-bottom: 4px;">Каждый</div>
-                            <div style="font-size: 11px; font-weight: 700; color: #ffd700;">+ 10%</div>
+                        <div style="text-align: center; padding: 18px 12px; background: linear-gradient(135deg, rgba(255,215,0,0.35), rgba(255,200,0,0.25)); border: 2px solid rgba(255,215,0,0.8); border-radius: 16px; backdrop-filter: blur(10px); box-shadow: 0 6px 25px rgba(255,215,0,0.5); width: 100%; box-sizing: border-box; min-height: 170px; display: flex; flex-direction: column; justify-content: center;">
+                            <div style="font-size: 42px; margin-bottom: 8px; filter: drop-shadow(0 3px 8px rgba(255,215,0,0.7)); flex-shrink: 0;">⭐</div>
+                            <div style="font-size: 14px; font-weight: 900; color: #ffd700; margin-bottom: 6px; flex-shrink: 0;">Premium</div>
+                            <div style="font-size: 20px; font-weight: 900; color: #ffd700; margin-bottom: 4px; text-shadow: 0 2px 10px rgba(255,215,0,0.5); flex-shrink: 0;">2000 🪙</div>
+                            <div style="font-size: 12px; font-weight: 800; color: rgba(255,255,255,0.98); margin-bottom: 4px; flex-shrink: 0;">Каждый</div>
+                            <div style="font-size: 11px; font-weight: 700; color: #ffd700; flex-shrink: 0;">+ 10%</div>
                         </div>
                     </div>
                     
