Update version to v6.7.37

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.36 - Buy Currency: Full-width cards, fixed overflow, proper box-sizing -->
+<!-- Quantum Nexus v6.7.37 - Buy Currency: Mobile optimized, better spacing, proper sizing -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
