--- a/web_app.html
+++ b/web_app.html
@@ -4081,7 +4081,7 @@
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 450px; max-height: 85vh; overflow-y: auto;background: linear-gradient(135deg, rgba(10, 14, 39, 0.98), rgba(15, 23, 42, 0.98));border-radius: 24px;border: 2px solid rgba(167,139,250,0.4);box-shadow: 0 10px 40px rgba(167,139,250,0.3);">
                     <div style="background:linear-gradient(135deg,#a78bfa,#c084fc,#d946ef);padding:20px;border-radius:22px 22px 0 0;text-align:center;position:relative;">
-                        <h2 style="font-size: 22px; color: #fff; margin: 0; font-weight: 900;">🛒 МАГАЗИН</h2>
+                        <h2 style="font-size: 28px; color: #fff; margin: 0; font-weight: 900; text-shadow: 0 2px 8px rgba(0,0,0,0.5);">🛒 МАГАЗИН</h2>
                         <button class="close-btn" onclick="this.closest('.modal').remove()">✕</button>
                     </div>
                     <div style="padding:20px;">
@@ -4330,11 +4330,11 @@
             'autobot': {
                 name: '⭐ VIP Крипто-Боты',
                 items: [
-                    {level: 0, name: '⭐ VIP Базовый Бот', desc: 'VIP автотап на 5 дней', speed: 3, duration: 7200, currency: 'stars', locked: false, basePrice: 100},
-                    {level: 0, name: '⭐ VIP Улучшенный Бот', desc: 'VIP автотап на 7 дней', speed: 3.25, duration: 10080, currency: 'stars', locked: false, basePrice: 200},
-                    {level: 0, name: '⭐ VIP Продвинутый Бот', desc: 'VIP автотап на 10 дней', speed: 3.5, duration: 14400, currency: 'stars', locked: false, basePrice: 350},
-                    {level: 0, name: '⭐ VIP Элитный Бот', desc: 'VIP автотап на 14 дней', speed: 3.75, duration: 20160, currency: 'stars', locked: false, basePrice: 500},
-                    {level: 0, name: '⭐ VIP Премиум Бот', desc: 'VIP автотап на 20 дней', speed: 4, duration: 28800, currency: 'stars', locked: false, basePrice: 750}
+                    {level: 0, name: '⭐ VIP Базовый Бот', desc: 'VIP автотап на 4 часа', speed: 3, duration: 240, currency: 'stars', locked: false, basePrice: 100},
+                    {level: 0, name: '⭐ VIP Улучшенный Бот', desc: 'VIP автотап на 12 часов', speed: 3.25, duration: 720, currency: 'stars', locked: false, basePrice: 200},
+                    {level: 0, name: '⭐ VIP Продвинутый Бот', desc: 'VIP автотап на 2 дня', speed: 3.5, duration: 2880, currency: 'stars', locked: false, basePrice: 350},
+                    {level: 0, name: '⭐ VIP Элитный Бот', desc: 'VIP автотап на 5 дней', speed: 3.75, duration: 7200, currency: 'stars', locked: false, basePrice: 500},
+                    {level: 0, name: '⭐ VIP Премиум Бот', desc: 'VIP автотап на 10 дней', speed: 4, duration: 14400, currency: 'stars', locked: false, basePrice: 750}
                 ]
             }
         };
