--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.37 - Buy Currency: Mobile optimized, better spacing, proper sizing -->
+<!-- Quantum Nexus v6.7.38 - Shop icon bold, VIP autobot duration 4h-10d -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
