--- a/web_app.html
+++ b/web_app.html
@@ -4230,7 +4230,7 @@
                                     ${category === 'autobot' || category === 'autobot_vip' ? `
                                         <div style="background: rgba(74,222,128,0.2); padding: 8px; border-radius: 8px; margin-bottom: 8px; display: flex; justify-content: space-between; align-items: center;">
                                             <span style="color: #4ade80; font-size: 12px; font-weight: 700;">⏱️ Длительность:</span>
-                                            <span style="color: #fff; font-size: 12px; font-weight: 800;">${item.duration < 60 ? item.duration + ' минут' : Math.floor(item.duration / 60) + ' часов'}</span>
+                                            <span style="color: #fff; font-size: 12px; font-weight: 800;">${formatDuration(item.duration)}</span>
                                         </div>
                                         <div style="background: rgba(74,222,128,0.2); padding: 8px; border-radius: 8px; margin-bottom: 8px; display: flex; justify-content: space-between; align-items: center;">
                                             <span style="color: #4ade80; font-size: 12px; font-weight: 700;">⚡ Скорость:</span>
@@ -4338,6 +4338,25 @@
                 ]
             }
         };
+        
+        // Function to format duration with correct Russian endings
+        function formatDuration(minutes) {
+            if (minutes < 60) {
+                return minutes === 1 ? '1 минута' : minutes < 5 ? `${minutes} минуты` : `${minutes} минут`;
+            }
+            const hours = Math.floor(minutes / 60);
+            if (hours < 24) {
+                if (hours === 1) return '1 час';
+                if (hours < 5) return `${hours} часа`;
+                if (hours < 21) return `${hours} часов`;
+                return `${hours} часов`; // 21-23 hours
+            }
+            const days = Math.floor(hours / 24);
+            if (days === 1) return '1 день';
+            if (days < 5) return `${days} дня`;
+            return `${days} дней`;
+        }
+        
         function loadShopCategory(category) {
             // Update button states
             document.querySelectorAll('.shop-cat-btn').forEach(btn => {
@@ -4535,8 +4554,8 @@
                         ` : category === 'energy_buy' ? `
                             <div style="background:rgba(251,191,36,0.2);padding:8px;border-radius:8px;margin-bottom:8px;">
                                 <div style="display:flex;justify-content:space-between;align-items:center;">
-                                    <span style="color:#fbbf24;font-size:12px;font-weight:700;">⚡ Добавить энергии/сек:</span>
-                                    <span style="color:#fff;font-size:13px;font-weight:800;">${currentEffect}</span>
+                                    <span style="color:#fbbf24;font-size:12px;font-weight:700;">⚡ У вас сейчас:</span>
+                                    <span style="color:#fff;font-size:13px;font-weight:800;">${currentEffect} энергии/сек</span>
                                 </div>
                                 <div style="display:flex;justify-content:space-between;align-items:center;margin-top:4px;">
                                     <span style="color:#fbbf24;font-size:12px;font-weight:700;">⚡ Прирост:</span>
@@ -4546,8 +4565,8 @@
                         ` : category === 'energy_expand' ? `
                             <div style="background:rgba(236,72,153,0.2);padding:8px;border-radius:8px;margin-bottom:8px;">
                                 <div style="display:flex;justify-content:space-between;align-items:center;">
-                                    <span style="color:#ec4899;font-size:12px;font-weight:700;">📈 Расширить максимум энергии на:</span>
-                                    <span style="color:#fff;font-size:13px;font-weight:800;">${currentEffect > 0 ? currentEffect.toLocaleString() : '0'}</span>
+                                    <span style="color:#ec4899;font-size:12px;font-weight:700;">📈 У вас сейчас:</span>
+                                    <span style="color:#fff;font-size:13px;font-weight:800;">+${currentEffect > 0 ? currentEffect.toLocaleString() : '0'} к энергии</span>
                                 </div>
                                 <div style="display:flex;justify-content:space-between;align-items:center;margin-top:4px;">
                                     <span style="color:#ec4899;font-size:12px;font-weight:700;">📈 Прирост:</span>
@@ -4558,7 +4577,7 @@
                             <div style="background:rgba(16,185,129,0.2);padding:8px;border-radius:8px;margin-bottom:8px;">
                                 <div style="display:flex;justify-content:space-between;align-items:center;">
                                     <span style="color:#10b981;font-size:12px;font-weight:700;">⏱️ Длительность:</span>
-                                    <span style="color:#fff;font-size:12px;font-weight:800;">${item.duration < 60 ? item.duration + ' минут' : Math.floor(item.duration / 60) + ' часов'}</span>
+                                    <span style="color:#fff;font-size:12px;font-weight:800;">${formatDuration(item.duration)}</span>
                                 </div>
                                 ${item.speed > 1 ? `
                                 <div style="display:flex;justify-content:space-between;align-items:center;margin-top:4px;">
