Update version to v6.7.39

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.38 - Shop icon bold, VIP autobot duration 4h-10d -->
+<!-- Quantum Nexus v6.7.39 - Duration endings fixed, energy display labels -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
