--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.39 - Duration endings fixed, energy display labels -->
+<!-- Quantum Nexus v6.7.40 - VIP mining/cards income adjusted (500 QuanHash, 300/10 base) -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
