Update version to v6.7.42

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.41 - VIP income ranges: mining 50-500, cards 300-20k/15-1k -->
+<!-- Quantum Nexus v6.7.42 - Starter cards all set to 20,000 coins -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
