--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.46 - Complete synchronization: All products working correctly -->
+<!-- Quantum Nexus v6.7.47 - Complete synchronization: All products including VIP Cards working correctly -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
