--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.48 - Fixed VIP button category selection and dynamic VIP mining price calculation -->
+<!-- Quantum Nexus v6.7.49 - Removed duplicate emoji from invoice title -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
