--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.49 - Removed duplicate emoji from invoice title -->
+<!-- Quantum Nexus v6.7.52 - Daily Tasks System Redesign -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
