update to v6.7.53 with fixes

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.52 - Daily Tasks System Redesign -->
+<!-- Quantum Nexus v6.7.53 - Daily Tasks Fixes -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
