--- a/web_app.html
+++ b/web_app.html
@@ -7140,10 +7140,14 @@
                                     <button onclick="verifyChannelSubscription(${task.id})" style="width: 100%; margin-top: 8px; padding: 10px; font-size: 14px; font-weight: 700; background: rgba(102,126,234,0.3); color: #a5b4fc; border: 2px solid rgba(102,126,234,0.5); border-radius: 10px; cursor: pointer; transition: all 0.3s;">
                                         ✅ Проверить подписку
                                     </button>
-                                ` : task.completed ? `
+                                ` : task.completed && !task.claimed ? `
                                     <button onclick="claimReward(${task.id})" style="width: 100%; padding: 12px; font-size: 15px; font-weight: 900; background: linear-gradient(135deg, #667eea, #764ba2); color: #fff; border: none; border-radius: 12px; cursor: pointer; transition: all 0.3s; box-shadow: 0 4px 15px rgba(102,126,234,0.4); text-shadow: 0 2px 4px rgba(0,0,0,0.3);" onmouseover="this.style.transform='scale(1.02)'; this.style.boxShadow='0 6px 20px rgba(102,126,234,0.6)'" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 15px rgba(102,126,234,0.4)'">
                                         🎁 Забрать награду
                                     </button>
+                                ` : task.claimed ? `
+                                    <div style="width: 100%; padding: 12px; font-size: 15px; font-weight: 900; background: rgba(16,185,129,0.3); color: #10b981; border: 2px solid rgba(16,185,129,0.5); border-radius: 12px; text-align: center; text-shadow: 0 2px 4px rgba(16,185,129,0.3);">
+                                        ✅ Награда получена!
+                                    </div>
                                 ` : ''}
                             </div>
                         `;
