--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v6.7.53 - Daily Tasks Fixes -->
+<!-- Quantum Nexus v6.7.54 - Daily Tasks Tracking Fix -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
