--- a/web_app.html
+++ b/web_app.html
@@ -7173,10 +7173,10 @@
                         <!-- Countdown Timer -->
                         <div id="dailyTasksCountdown" style="background: linear-gradient(135deg, rgba(102, 126, 234, 0.2), rgba(118, 75, 162, 0.15)); border: 2px solid rgba(102, 126, 234, 0.5); border-radius: 16px; padding: 18px; margin-bottom: 20px; text-align: center; box-shadow: 0 6px 25px rgba(102,126,234,0.3);">
                             <div style="font-size: 14px; font-weight: 800; color: rgba(255,255,255,0.9); margin-bottom: 8px;">⏰ Обновление через:</div>
-                            <div id="countdownTimer" style="font-size: 24px; font-weight: 900; color: #667eea; text-shadow: 0 2px 10px rgba(102,126,234,0.5);">' + getCountdownText() + '</div>
+                            <div id="countdownTimer" style="font-size: 24px; font-weight: 900; color: #667eea; text-shadow: 0 2px 10px rgba(102,126,234,0.5);">${getCountdownText()}</div>
                         </div>
 
-                        <div id="dailyTasksList" style="display:flex;flex-direction:column;gap:15px;">' + tasksHtml + '</div>
+                        <div id="dailyTasksList" style="display:flex;flex-direction:column;gap:15px;">${tasksHtml}</div>
                     </div>
                 </div>
             `;
