--- a/web_app.html
+++ b/web_app.html
@@ -7325,7 +7325,7 @@
                 try {
                     // Check if subscribed (handle both true/false and undefined)
                     if (data.subscribed === true) {
-                        // Subscribed - immediately claim reward automatically without page reload
+                        // Subscribed - immediately claim reward automatically without showing button
                         if (verifyButton) {
                             verifyButton.textContent = '⏳ Выдача награды...';
                             verifyButton.disabled = true;
@@ -7337,8 +7337,52 @@
                                 subscriptionLink.style.display = 'none';
                             }
                         }
-                        // Automatically claim reward immediately - no page reload
-                        claimReward(taskId);
+                        // Immediately call claim API and update UI - no intermediate button
+                        fetch('/api/claim_task', {
+                            method: 'POST',
+                            headers: {'Content-Type': 'application/json'},
+                            body: JSON.stringify({user_id: window.user?.id, task_id: taskId})
+                        })
+                        .then(res => res.json())
+                        .then(claimData => {
+                            if (claimData.success) {
+                                // Instantly mark task as claimed - replace verify button with success message
+                                if (taskCard && verifyButton) {
+                                    const successDiv = document.createElement('div');
+                                    successDiv.textContent = '✅ Награда получена!';
+                                    successDiv.style.cssText = 'width: 100%; margin-top: 8px; padding: 12px; font-size: 15px; font-weight: 900; background: rgba(16,185,129,0.3); color: #10b981; border: 2px solid rgba(16,185,129,0.5); border-radius: 12px; text-align: center; text-shadow: 0 2px 4px rgba(16,185,129,0.3);';
+                                    verifyButton.parentNode.replaceChild(successDiv, verifyButton);
+                                }
+                                // Update progress indicator
+                                if (taskCard) {
+                                    const progressBar = taskCard.querySelector('[style*="width"]');
+                                    if (progressBar) {
+                                        progressBar.style.width = '100%';
+                                        progressBar.style.background = 'linear-gradient(90deg, rgba(16,185,129,0.8) 0%, rgba(16,185,129,1) 100%)';
+                                    }
+                                    const progressText = taskCard.querySelector('div[style*="font-size: 14px"]');
+                                    if (progressText && progressText.textContent.includes('Прогресс:')) {
+                                        progressText.textContent = '✅ Выполнено';
+                                        progressText.style.color = '#10b981';
+                                    }
+                                }
+                                // Update coins display immediately - no page reload
+                                loadData();
+                            } else {
+                                // Error claiming - restore button
+                                restoreButton();
+                                if (window.tg && tg.showAlert) {
+                                    tg.showAlert('❌ ' + (claimData.error || 'Ошибка при получении награды'));
+                                }
+                            }
+                        })
+                        .catch(err => {
+                            console.error('Claim reward error:', err);
+                            restoreButton();
+                            if (window.tg && tg.showAlert) {
+                                tg.showAlert('❌ Ошибка при получении награды');
+                            }
+                        });
                     } else {
                         // Not subscribed (subscribed === false or undefined) - show error and restore button
                         restoreButton();
