fix: Add explicit styles for dailyBonusModal to ensure it displays correctly

--- a/web_app.html
+++ b/web_app.html
@@ -7045,6 +7045,17 @@
             modal = document.createElement('div');
             modal.className = 'modal active';
             modal.id = 'dailyBonusModal';
+            modal.style.display = 'block';
+            modal.style.position = 'fixed';
+            modal.style.top = '0';
+            modal.style.left = '0';
+            modal.style.width = '100%';
+            modal.style.height = '100%';
+            modal.style.backgroundColor = 'rgba(0, 0, 0, 0.8)';
+            modal.style.zIndex = '10000';
+            modal.style.display = 'flex';
+            modal.style.alignItems = 'center';
+            modal.style.justifyContent = 'center';
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 500px; width: 95vw; max-height: 90vh; overflow: hidden; background: linear-gradient(135deg, rgba(0,0,0,0.95), rgba(20,20,30,0.98)); border-radius: 24px; backdrop-filter: blur(20px); padding: 0; border: 2px solid rgba(102,126,234,0.3);">
                     <!-- VIP Style Header with Layered Effect -->
