fix: Add safe e.preventDefault check to restored openDailyBonus

--- a/web_app.html
+++ b/web_app.html
@@ -7029,7 +7029,9 @@
     
     <script>
         function openDailyBonus(e) {
-            e.preventDefault();
+            if (e && typeof e.preventDefault === 'function') {
+                e.preventDefault();
+            }
             // Check if modal already exists
             let modal = document.getElementById('dailyBonusModal');
             if (modal) {
