--- a/web_app.html
+++ b/web_app.html
@@ -7059,7 +7059,7 @@
                                 <div style="font-size: 13px; color: rgba(255,255,255,0.85); margin-top: 4px; font-weight: 700;">Выполняйте и получайте награды!</div>
                             </div>
                         </div>
-                        <button class="close-btn" onclick="this.closest('.modal').remove()" style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); color: #fff; border: 2px solid rgba(255,255,255,0.3); width: 34px; height: 34px; border-radius: 50%; cursor: pointer; font-size: 20px; font-weight: bold; transition: all 0.3s; z-index: 3; flex-shrink: 0;">✕</button>
+                        <button class="close-btn" onclick="const modal = this.closest('.modal'); if(modal) { const timers = modal.querySelectorAll('[data-interval-id]'); timers.forEach(t => { if(t.dataset.intervalId) clearInterval(parseInt(t.dataset.intervalId)); }); modal.remove(); }" style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); color: #fff; border: 2px solid rgba(255,255,255,0.3); width: 34px; height: 34px; border-radius: 50%; cursor: pointer; font-size: 20px; font-weight: bold; transition: all 0.3s; z-index: 3; flex-shrink: 0;">✕</button>
                     </div>
                     
                     <div style="padding: 20px; overflow-y: auto; max-height: calc(90vh - 150px);">
@@ -7209,9 +7209,12 @@
                                             } else {
                                                 timerEl.textContent = '✅ Время вышло! Можно забрать награду';
                                                 timerEl.style.color = '#10b981';
-                                                // Reload tasks to update status
+                                                // Reload tasks to update status only if modal is open
                                                 setTimeout(() => {
-                                                    openDailyBonus();
+                                                    const modal = document.getElementById('dailyBonusModal');
+                                                    if (modal && modal.classList.contains('active')) {
+                                                        openDailyBonus({preventDefault: () => {}});
+                                                    }
                                                 }, 1000);
                                             }
                                         }
