fix: Add modal to DOM before innerHTML and set display styles explicitly

--- a/web_app.html
+++ b/web_app.html
@@ -7044,6 +7044,10 @@
             modal = document.createElement('div');
             modal.className = 'modal active';
             modal.id = 'dailyBonusModal';
+            modal.style.display = 'flex';
+            modal.style.alignItems = 'center';
+            modal.style.justifyContent = 'center';
+            document.body.appendChild(modal);
             modal.innerHTML = `
                 <div class="modal-content" style="max-width: 500px; width: 95vw; max-height: 90vh; overflow: hidden; background: linear-gradient(135deg, rgba(0,0,0,0.95), rgba(20,20,30,0.98)); border-radius: 24px; backdrop-filter: blur(20px); padding: 0; border: 2px solid rgba(102,126,234,0.3);">
                     <!-- VIP Style Header with Layered Effect -->
@@ -7073,7 +7077,6 @@
                     </div>
                 </div>
             `;
-            document.body.appendChild(modal);
             
             // Start countdown timer
             function updateCountdown() {
